WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199508
REGRESSION(
r244218
): desmos.com: Cannot scroll formulas region when region is scrollable
https://bugs.webkit.org/show_bug.cgi?id=199508
Summary
REGRESSION(r244218): desmos.com: Cannot scroll formulas region when region is...
Antti Koivisto
Reported
2019-07-04 23:49:49 PDT
Add a quirk
Attachments
patch
(5.51 KB, patch)
2019-07-04 23:55 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2019-07-04 23:50:07 PDT
<
rdar://problem/50925173
>
Antti Koivisto
Comment 2
2019-07-04 23:55:36 PDT
Created
attachment 373480
[details]
patch
WebKit Commit Bot
Comment 3
2019-07-05 07:18:52 PDT
Comment on
attachment 373480
[details]
patch Clearing flags on attachment: 373480 Committed
r247152
: <
https://trac.webkit.org/changeset/247152
>
WebKit Commit Bot
Comment 4
2019-07-05 07:18:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug