REGRESSION(r244218): desmos.com: Cannot scroll formulas region when region is scrollable https://bugs.webkit.org/show_bug.cgi?id=199508 <rdar://problem/50925173>

Reviewed by Zalan Bujtas.

The page invokes preventDefault on simulated mouse events which stops scrolling.
To fix, add a quirk that turns simulated mouse events non-cancelable.

* dom/MouseEvent.h:
* dom/ios/MouseEventIOS.cpp:
(WebCore::MouseEvent::create):
* page/Quirks.cpp:
(WebCore::Quirks::simulatedMouseEventTypeForTarget const):
(WebCore::Quirks::shouldDispatchSimulatedMouseEventsOnTarget const): Deleted.

To avoid adding more similar functions, and for future flexibility, make this one return the type too.

* page/Quirks.h:


Canonical link: https://commits.webkit.org/213418@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247152 268f45cc-cd09-0410-ab3c-d52691b4dbfc